--- a/hello/index.html
+++ b/hello/index.html
@@ -21,6 +21,14 @@
     </style>
 </head>
 <body style="padding:0; margin: 0; background: #000;">
+<script src="res/protobuf/Long.js"></script>
+<script src="res/protobuf/ByteBufferAB.js"></script>
+<script src="res/protobuf/ProtoBuf.js"></script>
+<script>
+    if (typeof dcodeIO === 'undefined' || !dcodeIO.ProtoBuf) {
+        throw(new Error("ProtoBuf.js is not present. Please see www/index.html for manual setup instructions."));
+    }
+</script>
 <script src="res/loading.js"></script>
 <canvas id="gameCanvas" width="480" height="720"></canvas>
 <script>
